# parendi-gpu-exp

./: .clangd  CMakeLists.txt
tCommTest/: CMakeLists.txt  compile.sh  datasets.txt  log.txt  report.ncu-rep  runBenchmarks.ipynb  runBenchmarks.py  runMiniBenchmarks.py  tCommTest.cu
xorSync/: CMakeLists.txt  benchmarks.ipynb  datasets-sync.txt  datasets.txt  runBenchmarks.py  xorSync.cu
